# fastapi_rag_assistant

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
chains/: chains.py
ingestion/: ingest.py
retriever/: retriever.py
vectorstore/: docstore.pkl  index.pkl
